# src

./: .gitignore  MarrtinoSpeechTablet.apk  README.md  debug.sh  facestart.sh  reset-display.sh  update.bash
apriltag_ros/: README.md
config/: app.py  requisite.txt
config/templates/: bluetooth.html  bluetooth_scan.html  index.html  wifi.html
docker/: debug.sh  read.me  ros_packages.txt  run.sh  test.sh
docker/humble/: .env  Dockerfile.chatbot  Dockerfile.mate-vnc  build_mecanum.sh  buildgazebo.sh  commit.sh  docker-compose.yml  docker-compose.yml.bridge  docker-compose.yml.host  entrypoint.sh  rebuild.sh  setwww.sh  start-docker.sh
docker/humble-host/: Dockerfile.mate-vnc  bringup.bash  build.sh  disable-screen-saver.sh  disablescreensaver.sh  docker-compose.yml  entrypoint.sh  setup_environment.sh  start-docker.sh  start.sh
install/: disable_screen_saver.sh  install.bash  installROS2.sh  installXRDP.sh  install_marrtinorobot_ws.bash  installenv.sh  instdocker2204.sh  instdocker2404.sh  instdockerpi.sh  requirements.txt
install/rules/: 00-teensy.rules  99-webcamoak.rules  dynamixel.rules  install_rules.sh  rplidar.rules  rules.rnd
install/script/: bringup.sh  depthimgtolaserscan.sh  descr.sh  explorer.sh  (+15 more)
manual/: DOCKER.md  NODES.md  TMUX.md
marrtinorobot2/: .gitignore  CMakeLists.txt  MANUALE.md  README.md  bringup.bash  flask_server_ros.py  marrtina.bash  package.xml  server_comandi.py  setlocal.sh  setwww.sh  smarrtino.bash  sonoqui  startsession.bash  tips.rnd
marrtinorobot2/marrtinorobot2_base/: CMakeLists.txt  package.xml
wifi_manager/: app.py
(+310 files in other folders)
